feat: implement banking metadata microservice
